--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Orane's Resume</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <table cellspacing="20px">
@@ -14,7 +15,7 @@
         </tr>
     </table>
     
-    <hr size="2" noshade="">
+    <hr>
     <h3>Education</h3>
     <ul>
         <li>Bachelor of Science, Computing</li>
@@ -79,11 +80,7 @@
                 </table>
             </td>
         </tr>
-    </table>
-
-
-
-    
+    </table>    
     <hr>
     <!-- <a href="skills.html" target="_blank">My Skills</a> -->
     <a href="contact-me.html" target="_blank">Contact me</a>
